--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .search-bar-container {
   padding-top: 20vh;
   width: 40%;
@@ -7,4 +11,11 @@
   flex-direction: column;
   align-items: center;
   min-width: 200px;
+}
+
+.Background{
+background-image: url(./images/landlord_door.png);
+background-size: cover;
+width: 100vw;
+height: 100vh;
 }
