--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,23 +2,26 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 120px;
-  color: black;
+  margin: 0px 120px;
+  padding-top: 10px;
+  color: lightgray;
   background-color: transparent;
 }
 
 .Logo{
   margin-right: 20px;
+  color: white;
+  background-color: ;
 }
 
 .nav-logo{
   font-family: Outfit;
   font-size: 42px;
   font-weight: 500;
-  background-color: #5f9ea0;
+  background-color: transparent;
+  color: white;
   border-radius: 50px;
   padding: 5px 38px;
-  color: white;
 }
 
 .nav-menu{
@@ -34,6 +37,6 @@
 .nav-contact{
   border-radius: 50px;
   padding: 10px 38px;
-  background:#5f9ea0;
+  background:#3B5751;
   color: white;
 }
