--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .Background{
-background-image: url(./images/landlord_door.png);
+background-image: url(./images/background.jpg);
 background-size: cover;
 width: 100vw;
 height: 100vh;
