--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 120px;
+  margin: 0px 10px;
   padding-top: 10px;
-  color: lightgray;
+  color: #3B5751;
   background-color: transparent;
 }
 
@@ -19,7 +19,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: white;
+  color: black;
   border-radius: 50px;
   padding: 5px 38px;
 }
