--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -19,7 +19,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: black;
+  color: #3B5751;
   border-radius: 50px;
   padding: 5px 38px;
 }
