--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 0px 10px;
   padding-top: 10px;
-  color: #3B5751;
+  color: white;
   background-color: transparent;
 }
 
@@ -37,6 +37,6 @@
 .nav-contact{
   border-radius: 50px;
   padding: 10px 38px;
-  background:#3B5751;
+  background: #3B5751;
   color: white;
 }
