--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
 .Logo{
   margin-right: 20px;
   color: white;
+  height: 60px;
 }
 
 .nav-logo{
@@ -18,7 +19,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: #3B5751;
+  color: white;
   border-radius: 50px;
   padding: 5px 38px;
 }
