--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,15 +1,18 @@
+@import '../../variables.module.css';
+
+
 .nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0px 10px;
   padding-top: 10px;
-  color: white;
   background-color: transparent;
 }
 
 .Logo{
   margin-right: 20px;
+  border-radius: 12px;
   color: white;
 }
 
@@ -18,7 +21,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: #3B5751;
+  color: var(--main-green-color);
   border-radius: 50px;
   padding: 5px 38px;
 }
