--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,11 @@
   margin: 0;
   padding: 0;
 }
-.search-bar-container {
-  padding-top: 20vh;
-  width: 40%;
-  margin: auto;
+
+.main-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 200px;
 }
 
 .Background{
