Revert "Merge branch 'main' of https://github.com/tomjwalt/landlord_v5"
This reverts commit 53ff2a883a8fdb1ddcfccae151c5682426640106, reversing
changes made to e93ea8416687652914817d2dbfedc07964a70bc0.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,7 +14,6 @@
   margin-right: 20px;
   border-radius: 12px;
   color: white;
-  height: 60px;
 }
 
 .nav-logo{
@@ -22,7 +21,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: white;
+  color: var(--main-green-color);
   border-radius: 50px;
   padding: 5px 38px;
 }
