--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,14 @@
   margin: 0;
   padding: 0;
 }
-
-.main-container{
+.search-bar-container {
+  padding-top: 20vh;
+  width: 40%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 200px;
 }
 
 .Background{
