--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,18 +1,15 @@
-@import '../../variables.module.css';
-
-
 .nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0px 10px;
   padding-top: 10px;
+  color: white;
   background-color: transparent;
 }
 
 .Logo{
   margin-right: 20px;
-  border-radius: 12px;
   color: white;
 }
 
@@ -21,7 +18,7 @@
   font-size: 42px;
   font-weight: 500;
   background-color: transparent;
-  color: var(--main-green-color);
+  color: #3B5751;
   border-radius: 50px;
   padding: 5px 38px;
 }
