--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 10px;
+  margin: 0px 0px;
   padding-top: 10px;
-  color: white;
+  color: darkgray;
   background-color: transparent;
 }
 
@@ -12,6 +12,7 @@
   margin-right: 20px;
   color: white;
   height: 60px;
+  cursor: pointer;
 }
 
 .nav-logo{
@@ -39,4 +40,15 @@
   padding: 10px 38px;
   background: #3B5751;
   color: white;
+  cursor: pointer;
+}
+
+.button{
+  background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    color: white;
 }
